--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,12 +5,12 @@
   <div class="container">
     <footer class="py-3">
       <div class="row py-5">
-        <div class="col-md-6">
+        <div class="col-12 col-md-6 mb-3 mb-md-0 text-center text-md-start">
           <article>
             <h3>Alex Cortes Garcia</h3>
             <h5 class="text-primary">Full Stack Developer</h5>
           </article>
-          <ul class="nav list-unstyled d-flex fs-3">
+          <ul class="nav list-unstyled d-flex justify-content-center justify-content-md-start fs-3">
             <li class="">
               <a
                 class="text-muted cursor-pointer"
@@ -40,19 +40,19 @@
             </li>
           </ul>
         </div>
-        <div class="col-6">
-          <article class="d-flex gap-3">
-            <h3>Get in touch</h3>
+        <div class="col-12 col-md-6 text-center text-md-start">
+          <article class="d-flex justify-content-center justify-content-md-start gap-3">
+            <h3 class="">Get in touch</h3>
             <ion-icon name="arrow-forward-outline" size="large" class="text-primary"></ion-icon>
           </article>
           <div class="row">
-            <article class="col">
+            <article class="col-12 col-md-6">
               <h5>EMAIL ME:</h5>
               <a
               class="text-primary"
               href="mailto:alex.g.cortes.g@gmail.com">alex.g.cortes.g@gmail.com</a>
             </article>
-            <article class="col">
+            <article class="col-12 col-md-6">
               <h5>CALL ME:</h5>
               <a class="text-primary" href="tel:9512925560">(951) 292 55 60</a>
             </article>
