--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ interface Props {
   title?: string;
 }
 
-const { title = 'Alex Cortes - Full Stack Developer' } = Astro.props;
+const { title = 'Alex Garcia - Full Stack Developer' } = Astro.props;
 ---
 
 <!DOCTYPE html>
