--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Projects from '../components/Projects.astro';
 import Footer from '../components/Footer.astro';
 ---
 
-<Layout title="Alex Cortes - Full Stack Developer">
+<Layout title="Alex Garcia - Full Stack Developer">
   <div>
     <div class="container">
       <Header />
