--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,9 +1,9 @@
 ---
 ---
 
-<section class="px-4 py-5 my-5 text-center">
+<section class="px-0 px-md-4 py-5 my-5 text-center">
   <span class="badge badge-neon rounded-pill px-3 py-2 mb-5">
-    🟢 Disponible para nuevos retos | Web & Mobile
+    🟢 Disponible para nuevos retos <span class="d-none d-md-inline">| Web & Mobile</span>
   </span>
   <h1 class="display-5" data-aos="fade-up">Hola, soy Alex Garcia</h1>
   <h2
