feat(ui): add contact form

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -29,14 +29,43 @@ const projects = [
 
 <section class="container py-5">
   <div class="row mb-5">
-    <div class="col-6 d-flex flex-column align-items-center justify-content-center p-5">
-      <h2 class="display-3 text-center mb-5">Recent works</h2>
-      <CardProject project={projects[0]} />
+    <div class="col-12 col-md-6 d-flex flex-column align-items-center justify-content-center p-auto p-md-5">
+      <h2 class="display-3 text-center fw-bold mb-5">Projectos</h2>
+      <CardProject class="mb-3 mb-md-0" project={projects[0]} />
     </div>
 
-    <div class="col-6 p-5">
-      <CardProject class="mb-5" project={projects[1]} />
+    <div class="col-12 col-md-6 p-auto p-md-5">
+      <CardProject class="mb-3 mb-md-5" project={projects[1]} />
       <CardProject project={projects[2]} />
     </div>
   </div>
 </section>
+
+
+<div class="container col-xl-10 col-xxl-8 px-4 py-5">
+    <div class="row align-items-center g-lg-5 py-5">
+      <div class="col-lg-7 text-center text-lg-start">
+        <h1 class="display-4 fw-bold lh-1 mb-3 text-info">Conversemos sobre tu próximo proyecto.</h1>
+        <p class="col-lg-10 fs-4">Siempre estoy disponible para discutir nuevas oportunidades de empleo, proyectos freelance o colaboraciones técnicas. Utiliza el formulario o contáctame directamente a través de mis canales profesionales.</p>
+      </div>
+      <div class="col-md-10 mx-auto col-lg-5">
+        <form class="p-4 p-md-5 rounded-3 spotlight-card shadow-lg" name="contact" netlify>
+          <div class="form-floating mb-3">
+            <input type="text" name="name" class="form-control" placeholder="Nombre" id="nameInput">
+            <label for="nameInput">Nombre</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="email" name="email" class="form-control" placeholder="name@example.com" id="emailInput">
+            <label for="emailInput">Email</label>
+          </div>
+          <div class="form-floating mb-3">
+            <textarea name="message" class="form-control" placeholder="Message" id="messageInput" style="height: 100px"></textarea>
+            <label for="messageInput">Mensaje</label>
+          </div>
+          <button class="w-100 btn btn-lg btn-primary" type="submit">Enviar</button>
+          <!-- <hr class="my-4">
+          <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small> -->
+        </form>
+      </div>
+    </div>
+  </div>
