--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -45,17 +45,17 @@
             <h3 class="">Get in touch</h3>
             <ion-icon name="arrow-forward-outline" size="large" class="text-primary"></ion-icon>
           </article>
-          <div class="row">
+          <div class="row justify-content-center justify-content-md-start">
             <article class="col-12 col-md-6">
               <h5>EMAIL ME:</h5>
               <a
               class="text-primary"
-              href="mailto:alex.g.cortes.g@gmail.com">alex.g.cortes.g@gmail.com</a>
+              href="mailto:alex.artisaan.dev">alex.artisaan.dev</a>
             </article>
-            <article class="col-12 col-md-6">
+            <!-- <article class="col-12 col-md-6">
               <h5>CALL ME:</h5>
               <a class="text-primary" href="tel:9512925560">(951) 292 55 60</a>
-            </article>
+            </article> -->
           </div>
         </div>
       </div>
