--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -49,7 +49,13 @@ const projects = [
         <p class="col-lg-10 fs-4">Siempre estoy disponible para discutir nuevas oportunidades de empleo, proyectos freelance o colaboraciones técnicas. Utiliza el formulario o contáctame directamente a través de mis canales profesionales.</p>
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
-        <form class="p-4 p-md-5 rounded-3 spotlight-card shadow-lg" name="contact" netlify>
+        <form
+          class="p-4 p-md-5 rounded-3 spotlight-card shadow-lg"
+          name="contact"
+          method="POST"
+          data-netlify-recaptcha="true"
+          data-netlify="true"
+        >
           <div class="form-floating mb-3">
             <input type="text" name="name" class="form-control" placeholder="Nombre" id="nameInput">
             <label for="nameInput">Nombre</label>
@@ -61,6 +67,9 @@ const projects = [
           <div class="form-floating mb-3">
             <textarea name="message" class="form-control" placeholder="Message" id="messageInput" style="height: 100px"></textarea>
             <label for="messageInput">Mensaje</label>
+          </div>
+          <div class="form-floating mb-3">
+            <div data-netlify-recaptcha="true"></div>
           </div>
           <button class="w-100 btn btn-lg btn-primary" type="submit">Enviar</button>
           <!-- <hr class="my-4">
