fix: typo errors

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -5,7 +5,7 @@
   <div class="container py-5">
     <div class="row align-items-center g-5">
       <div class="col-lg-6">
-        <h2 class="display-3 fw-bold mb-4 text-center text-md-start mb-5">Acerca de mi</h2>
+        <h2 class="display-3 fw-bold mb-4 text-center text-md-start mb-5">Acerca de mí</h2>
         <p class="fs-5 text-white text-opacity-75">
           Soy un Ingeniero de Software Full-Stack Senior con 6 años de experiencia, enfocado en el ciclo de vida completo del desarrollo. Mi valor no reside sólo en escribir código, sino en la entrega de soluciones completas que garantizan la eficiencia y escalabilidad a largo plazo.
         </p>
