--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -25,7 +25,7 @@ const ingenia = [
     title: "Landing Pages",
     tags: ["HTML", "CSS", "JavaScript", "Responsive web design"],
     description:
-    "Desarrolle landing pages y SPA's para startups nacionales utilizando temas personalizados basados en Bootstrap, optimizados para SEO y dispositibos mobiles.",
+    "Desarrolle landing pages y SPA's para startups nacionales utilizando temas personalizados basados en Bootstrap, optimizados para SEO y dispositivos móviles.",
     features: ["Bootstrap", "JavaScript"],
   },
 ];
@@ -34,7 +34,7 @@ const ingenia = [
 <div>
   <section class="py-5">
     <div class="container my-5">
-      <h2 class="text-center fw-bold display-3 mb-5">Experiencia professional</h2>
+      <h2 class="text-center fw-bold display-3 mb-5">Experiencia profesional</h2>
       <div class="row mb-5">
         <div class="col-12 col-md-4 rounded p-5 text-center text-md-start">
           <img
@@ -97,7 +97,7 @@ const ingenia = [
           <img
             class="img-fluid w-25 rounded-circle mb-3"
             src="/images/logo-ingenia.png"
-            alt="log ingenia oaxaca"
+            alt="logo ingenia oaxaca"
           />
           <span class="d-block">2019 - 2025</span>
           <h3 class="text-primary my-1">Web Developer</h3>
