--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -50,7 +50,7 @@
               <h5>EMAIL ME:</h5>
               <a
               class="text-primary"
-              href="mailto:alex.artisaan.dev">alex.artisaan.dev</a>
+              href="mailto:alex@artisaan.dev">alex@artisaan.dev</a>
             </article>
             <!-- <article class="col-12 col-md-6">
               <h5>CALL ME:</h5>
