--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -4,7 +4,7 @@ const cards = [
   {
     title: "Frontend intuitivo, responsivo y funcional",
     icon: "bi-layers",
-    text: "Construyó el UI completo de aplicaciones multiplataforma asegurando que la experiencia del usuario sea fluida.",
+    text: "Construyo el UI completo de aplicaciones multiplataforma asegurando que la experiencia del usuario sea fluida.",
   },
   {
     title: "Back-end de alto rendimiento",
