feat: load cv file

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,6 @@
     <a class="navbar-brand fw-bold fs-4" href="/">&lt;DevAlex /&gt;</a>
   </div>
   <div class="col-6 col-md-3 text-end">
-    <button type="button" class="btn btn-info">Descargar CV</button>
+    <a class="btn btn-info" href="/Alex Cortes Garcia.pdf" download>Descargar CV</a>
   </div>
 </header>
