feat(ui): fix responsive issues

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -19,7 +19,7 @@
           desarrollo móvil.
         </div> -->
       </div>
-      <div class="col-lg-6">
+      <div class="d-none d-md-block col-lg-6">
         <div class="atom-section">
           <div class="atom-container" id="atomContainer">
             <!-- Core nucleus -->
