--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,9 +19,12 @@
       <strong class="text-primary">Especialista en Laravel, NestJS, React/TS.</strong>
     </p>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-5">
-      <button type="button" class="btn btn-info btn-lg px-4">
+      <a
+        class="btn btn-info btn-lg px-4"
+        href="#contact"
+      >
         Contáctame
-      </button>
+      </a>
     </div>
   </div>
   <div class="mb-5">
