--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -45,7 +45,7 @@ const projects = [
   </div>
 </section>
 
-<div class="container px-4 py-5">
+<div class="container px-4 py-5" id="contact">
   <div class="row align-items-center g-lg-5 py-5">
     <div class="col-12 col-md-7 text-center text-lg-start mb-5 mb-md-0">
       <h1 class="display-4 fw-bold lh-1 mb-3 text-info">
