--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -34,27 +34,33 @@
           <a
             class="text-white"
             target="_blank"
+            rel="noopener noreferrer"
             href="https://github.com/AlexByte18"
+            aria-label="Visitar perfil de GitHub de Alex Garcia"
           >
-            <ion-icon name="logo-github"></ion-icon>
+            <ion-icon name="logo-github" aria-hidden="true"></ion-icon>
           </a>
         </li>
         <li class="ms-3">
           <a
             class="text-white"
             target="_blank"
+            rel="noopener noreferrer"
             href="https://www.linkedin.com/in/alex-garcia-802683125/"
+            aria-label="Visitar perfil de LinkedIn de Alex Garcia"
           >
-            <ion-icon name="logo-linkedin"></ion-icon>
+            <ion-icon name="logo-linkedin" aria-hidden="true"></ion-icon>
           </a>
         </li>
         <li class="ms-3">
           <a
             class="text-white"
             target="_blank"
+            rel="noopener noreferrer"
             href="https://codepen.io/your-work"
+            aria-label="Visitar perfil de CodePen de Alex Garcia"
           >
-            <ion-icon name="logo-codepen"></ion-icon>
+            <ion-icon name="logo-codepen" aria-hidden="true"></ion-icon>
           </a>
         </li>
       </ul>
