feat: update codepen link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -38,7 +38,7 @@
                 class="text-muted"
                 target="_blank"
                 rel="noopener noreferrer"
-                href="https://codepen.io/your-work"
+                href="https://codepen.io/devalexc"
                 aria-label="Visitar perfil de CodePen de Alex Garcia"
               >
                 <ion-icon name="logo-codepen" aria-hidden="true"></ion-icon>
