--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -57,7 +57,7 @@
             class="text-white"
             target="_blank"
             rel="noopener noreferrer"
-            href="https://codepen.io/your-work"
+            href="https://codepen.io/devalexc"
             aria-label="Visitar perfil de CodePen de Alex Garcia"
           >
             <ion-icon name="logo-codepen" aria-hidden="true"></ion-icon>
